crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__read_file_not_found.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/read_file_not_found.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [(local filename @0)] []
      (block
         (print (call +1 (global read_file @-2) (local filename @0)))))
   (expr (call +2 (global f @1) "this_file_does_not_exist")))

----- stderr -----
