crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__return_in_if_else.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--loop=ast"
    - crabbing-interpreters/tests/cases/return_in_if_else.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] []
      (block
         (if
            true
            (block
               (return 42.0))
            (block
               (print "not executed")))))
   (print (call +2 (global f @1))))

----- stderr -----
