crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__split_state_type_error_number_is_string.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/split_state_type_error_number_is_string.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class FakeState (global @1) ∅
      (method init [(local this @0)] []
         (block
            (expr (= (setattr (local this @0) string) "string"))
            (expr (= (setattr (local this @0) start) "string"))
            (init-return))))
   (expr (call +2 (global split @-3) (call +2 (global FakeState @1)))))

----- stderr -----
